force-app/main/default/objects/Warehouse_Stock__c/Warehouse_Stock__c.object-meta.xml
<CustomObject>
    <label>Warehouse Stock</label>
    <pluralLabel>Warehouse Stock</pluralLabel>
    <nameField>
        <label>Stock Entry Number</label>
        <displayFormat>WST-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Real-time warehouse inventory tracking per product and batch for company stock management</description>
</CustomObject>