force-app/main/default/objects/Warehouse_Stock__c/fields/Batch_Master__c.field-meta.xml
<CustomField>
    <fullName>Batch_Master__c</fullName>
    <label>Batch Master</label>
    <type>Lookup</type>
    <referenceTo>Batch_Master__c</referenceTo>
    <relationshipName>Warehouse_Stocks</relationshipName>
    <relationshipLabel>Warehouse Stocks</relationshipLabel>
    <description>Lookup to Batch Master for proper relational integrity. Links warehouse stock to batch records for expiry tracking and FEFO picking.</description>
</CustomField>