force-app/main/default/objects/Warehouse_Stock__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <label>Batch Number</label>
    <type>Text</type>
    <length>100</length>
    <description>Batch number for tracking inventory at batch level</description>
</CustomField>