force-app/main/default/objects/Warehouse_Stock__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
    <description>Expiry date for FEFO picking</description>
</CustomField>