force-app/main/default/objects/Warehouse_Stock__c/fields/Is_Low_Stock__c.field-meta.xml
<CustomField>
    <fullName>Is_Low_Stock__c</fullName>
    <label>Is Low Stock</label>
    <type>Checkbox</type>
    <formula>AND(
    NOT(ISBLANK(Min_Stock_Level__c)),
    (Qty_On_Hand__c - Qty_Reserved__c) &lt;= Min_Stock_Level__c,
    (Qty_On_Hand__c - Qty_Reserved__c) &gt; 0
)</formula>
</CustomField>