force-app/main/default/objects/Warehouse_Stock__c/fields/Is_Zero_Stock__c.field-meta.xml
<CustomField>
    <fullName>Is_Zero_Stock__c</fullName>
    <label>Is Zero Stock</label>
    <type>Checkbox</type>
    <formula>Qty_On_Hand__c = 0</formula>
</CustomField>