force-app/main/default/objects/Warehouse_Stock__c/fields/Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Date__c</fullName>
    <label>Last Transaction Date</label>
    <type>DateTime</type>
</CustomField>