force-app/main/default/objects/Warehouse_Stock__c/fields/Max_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Max_Stock_Level__c</fullName>
    <label>Max Stock Level</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>