force-app/main/default/objects/Warehouse_Stock__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Warehouse Stock</relationshipLabel>
    <relationshipName>Warehouse_Stock</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>