force-app/main/default/objects/Warehouse_Stock__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Warehouse Stock</relationshipLabel>
    <relationshipName>Warehouse_Stock_Ext</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>