force-app/main/default/objects/Warehouse_Stock__c/fields/Qty_Available__c.field-meta.xml
<CustomField>
    <fullName>Qty_Available__c</fullName>
    <label>Qty Available</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <formula>Qty_On_Hand__c - Qty_Reserved__c</formula>
</CustomField>