force-app/main/default/objects/Warehouse_Stock__c/fields/Qty_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Qty_On_Hand__c</fullName>
    <label>Qty On Hand</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>