force-app/main/default/objects/Warehouse_Stock__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Lookup</type>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Warehouse Stock</relationshipLabel>
    <relationshipName>Warehouse_Stock</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>