force-app/main/default/objects/Warehouse_Stock__c/validationRules/Min_Max_Stock_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Max_Stock_Valid</fullName>
    <active>true</active>
    <description>Ensures Min Stock Level is less than Max Stock Level</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Min_Stock_Level__c)), NOT(ISBLANK(Max_Stock_Level__c)), Min_Stock_Level__c &gt;= Max_Stock_Level__c)</errorConditionFormula>
    <errorMessage>Min Stock Level must be less than Max Stock Level.</errorMessage>
</ValidationRule>