force-app/main/default/objects/Warehouse_Stock__c/validationRules/Reserved_Cannot_Exceed_OnHand.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserved_Cannot_Exceed_OnHand</fullName>
    <active>true</active>
    <description>Ensures reserved quantity does not exceed quantity on hand</description>
    <errorConditionFormula>Qty_Reserved__c &gt; Qty_On_Hand__c</errorConditionFormula>
    <errorMessage>Reserved quantity cannot exceed quantity on hand.</errorMessage>
</ValidationRule>