force-app/main/default/objects/Warehouse_Stock__c/listViews/All_Stock.listView-meta.xml
<ListView>
    <fullName>All_Stock</fullName>
    <label>All Stock</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Warehouse__c</columns>
    <columns>Product_Ext__c</columns>
    <columns>Batch_Number__c</columns>
    <columns>Qty_On_Hand__c</columns>
    <columns>Qty_Reserved__c</columns>
    <columns>Qty_Available__c</columns>
    <columns>Is_Low_Stock__c</columns>
</ListView>