force-app/main/default/objects/Warehouse_Stock__c/listViews/Low_Stock_Items.listView-meta.xml
<ListView>
    <fullName>Low_Stock_Items</fullName>
    <label>Low Stock Items</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Low_Stock__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <columns>NAME</columns>
    <columns>Warehouse__c</columns>
    <columns>Product__c</columns>
    <columns>Qty_Available__c</columns>
    <columns>Min_Stock_Level__c</columns>
</ListView>