force-app/main/default/objects/Warehouse_Stock__c/listViews/Zero_Stock_Items.listView-meta.xml
<ListView>
    <fullName>Zero_Stock_Items</fullName>
    <label>Zero Stock Items</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Zero_Stock__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <columns>NAME</columns>
    <columns>Warehouse__c</columns>
    <columns>Product_Ext__c</columns>
    <columns>Qty_On_Hand__c</columns>
</ListView>